--- a/src/app/components/PartyProfile/PartyProfile.module.scss
+++ b/src/app/components/PartyProfile/PartyProfile.module.scss
@@ -8,6 +8,7 @@
 .imgWrap {
   border-radius: 50%;
   overflow: hidden;
+  position: relative;
 
   @include between-property('height', 64px, 42px, 1200px, 0);
   @include between-property('width', 64px, 42px, 1200px, 0);
